--- a/templates/payment/payment.html
+++ b/templates/payment/payment.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %} {% load static %} {% load humanize %} {% block title %} Payment {% endblock title %} {% block body %}
-<style></style>
+{% if amount_remained.amount_remained == 0 %}
+<div class="alert alert-info mt-3 p-3">
+  You have completed you payments click <a href="{% url 'tenant_dashboard' %}"><b style="font-weight: 600;" class="text-dark">Here</b> to go back to the dashboard</a>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <i class="material-icons">close</i>
+  </button>
+  <span> </span>
+</div>
+{% endif %}
 <div class="col-md-12">
   <form
     id="payment-form"
@@ -262,7 +270,13 @@
                     </div>
                     <div class="payment-details-right">
                       <ul>
-                        <li class="text-success"><b>${{ final_amount|intcomma }}</b></li>
+                        <li class="text-success"> 
+                          {% if amount_remained.amount_remained == 0 %}
+                          <b>$0.00</b>
+                          {% else %}
+                          <b>${{ final_amount|intcomma }}</b>
+                          {% endif %}
+                        </li>
                         <li class="text-danger">$0.00</li>
                       </ul>
                     </div>
@@ -278,7 +292,13 @@
                     </div>
                     <div class="total-payment-amount-right">
                       <ul class="ml-2">
-                        <li id="total-amount"><b>${{ final_amount }}</b></li>
+                        <li id="total-amount">
+                          {% if amount_remained.amount_remained == 0 %}
+                          <b>$0.00</b></li>
+                          {% else %}
+                          <b>${{ final_amount|intcomma }}</b>
+                          {% endif %}
+                        </li>
                       </ul>
                     </div>
                   </div>
@@ -290,7 +310,7 @@
         {% comment %} Row5 end {% endcomment %}
         <br />
         
-        <button class="btn btn-rose btn-round float-right" data-toggle="modal" data-target="#deleteToggle" type="button">
+        <button class="btn btn-rose btn-round float-right"  {% if amount_remained.amount_remained == 0 %} style="display: none;" {% endif %} data-toggle="modal" data-target="#deleteToggle" type="button">
           <i class="material-icons">near_me </i> Submit
           <div class="ripple-container"></div>
         </button>
@@ -311,12 +331,19 @@
           </button>
         </div>
         <div class="modal-body">
-          Are you sure you want to make a payment of <span style="font-weight: 600; color: red;">${{ final_amount }}</span>?
+          {% if amount_remained.amount_remained == 0 %}
+          You can't make payments because you have paid in full
+          {% else %}
+          Are you sure you want to make a payment of <span style="font-weight: 600; color: red;">${{ final_amount|intcomma }}</span>?
+          {% endif %}
+          
         </div>
+        {% if amount_remained.amount_remained != 0 %}
         <div class="modal-footer">
           <button type="button" class="btn btn-info px-5 py-2" data-dismiss="modal">No</button>
           <button type="button" id="triggerSubmit" class="btn btn-success ml-3 px-5 py-2" data-dismiss="modal">Yes</button>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
