--- a/templates/new_door/property_unit_overview.html
+++ b/templates/new_door/property_unit_overview.html
@@ -182,7 +182,7 @@
             <td>{{ unit.tenantcontract.tenant.user.get_full_name.capitalize }}</td>
             <td class="rental_amount">
               {% if unit.tenantcontract.annual_rent %}
-                ${{ unit.tenantcontract.annual_rent|intcomma }}
+               {{ unit.tenantcontract.annual_rent|intcomma }}
               {% endif %}
             </td>
             <td class="amount"></td>
@@ -190,7 +190,7 @@
               {% if unit.tenantcontract.payment_set.all %}
                 {% for payment in unit.tenantcontract.payment_set.all %}
                   {% if forloop.last %}
-                    ${{ payment.remain_amount|intcomma }}
+                    {{ payment.remain_amount|intcomma }}
                   {% endif %}
                 {% endfor %}
               {% endif %}
