--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -152,7 +152,7 @@
                     {% endfor %}      
                   {% endfor %}
                 </td>
-                <span class="totalInEach" style="color: '#ffffff';">
+                <span class="totalInEach" style="color: #ffffff;">
                   {% for unit in property.unit_set.all %}
                     {{unit.tenantcontract.annual_rent }}  
                   {% endfor %}
