--- a/templates/tenant/verify_document.html
+++ b/templates/tenant/verify_document.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block title %} Review Documents
+{% extends 'base.html' %} {% load static %} {% block title %} Verify Documents
 {% endblock title%} {% block gallerycss %}
 <link href="{% static 'css/gallery.css' %}" rel="stylesheet" />
 {% endblock %} {% block body %}
@@ -16,159 +16,97 @@
         class="card-header card-header-rose card-header-text"
         style="font-size: 20px"
       >
-        <div class="card-text">
+        <div class="card-text" style="padding-left: 1px">
           <a href="" class="card-header card-header-rose card-header-text">
-            <i class="material-icons">roofing</i> Verify Documents
+            <i class="material-icons">cloud_upload</i> Verify Documents
           </a>
         </div>
       </div>
-
       <div class="card-body">
-        <br />
-        {% comment %} Row1 {% endcomment %}
-        <div class="row justify-content-center">
-          <!-- *************************User Documents tab*************** -->
+        <div class="row">
           <div class="col-md-12">
+            <div class="card-body">
+              <div class="material-datatables">
+                <table
+                  id="datatables"
+                  class="table table-striped table-no-bordered table-hover"
+                  cellspacing="0"
+                  width="100%"
+                  style="width: 100%"
+                >
+                  <thead>
+                    <tr>
+                      <th>Document Type</th>
+                      <th>File Name</th>
+                      <th>Size</th>
+                      <th>Status</th>
+                      <th>File Progress</th>
+                      <th class="text-center">Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% if tenant_docs %} {% for uploaded_document in tenant_docs %}
+                      <tr>
+                        <td scope="row">{{ uploaded_document.doc_type.docs_type.upper }}</td>
+                        <td class="doc_name">{{ uploaded_document.image.name.upper }}</td>
+                        <td>{{ uploaded_document.image.size }} KB</td>
+                        <td>
+                          {% if uploaded_document.is_verified %}
+                            <span class="badge badge-success">Approved</span>
+                          {% else %}
+                          <span class="badge badge-warning">Pending</span>
+                          {% endif %}
+                          </td>
+                        <td>100%</td>
+                        <td class="text-center">
+                          <a href="" class="d-inline text-warning click_img"  data-image="{{ uploaded_document.image.url }}" data-target="#staticBackdrop"
+                          data-toggle="modal" title="View Document">
+                            <i class="material-icons">dvr</i>
+                          </a>
 
-            <!-- Modal -->
-            <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Zoomed Image</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+                          <a href="" class="d-inline text-success mx-3 " title="Approve Document">
+                            <i class="material-icons icon-verify p-2" data-filename="{{ uploaded_document.image.name }}">check</i>
+                          </a>
 
-            <div class="card p-3">
-              <div class="card-header">
-                <h4 class="card-title"><strong>User Documents</strong></h4>
-              </div>
-              <hr class="m-0" />
-              <div class="card-body row py-5 verify-doc" style="width: 100%">
-                {% for tenant_doc in tenant_docs %}
-                  <div class="tenant-doc col-md-3">
-
-                  <div class="header-verify">
-                    <h4><b>{{ tenant_doc.doc_type.docs_type.upper }}</b></h4>
-                  </div>
-                  <div
-                    class="body-verify"
-                    style="width: 100%; height: 140px; cursor: pointer; box-shadow: 0 0 6px rgb(156, 156, 156);"
-                  >
-                    <div class="verify-card-img"  style="object-fit: cover; height: 100%; overflow: hidden;  border-radius: 4px;">
-                      <img
-                      data-target="#staticBackdrop"
-                      data-toggle="modal"
-                      src="{{ tenant_doc.image.url }}"
-                      alt=""
-                      class="img-fluid click_img"
-                      data-image="{{ tenant_doc.image.url }}"
-                      style="object-fit: cover; height: 100%"
-                    />
-                    </div>
-                  
-
-                    <div class="verify-wrapper-icon">
-                      <i
-                        class="fas fa-times mr-2 text-danger icon-remove"
-                        data-file-name="{{ tenant_doc.image.name }}"
-                      ></i>
-                      
-                      {% if tenant_doc.is_verified %}
-                      <i
-                        class="fas fa-check-circle icon-verify text-success"
-                        data-file-name="{{ tenant_doc.image.name }}"
-                      ></i>
-                      {% else %}
-                      <i
-                        class="fas fa-check-circle icon-verify"
-                        data-file-name="{{ tenant_doc.image.name }}"
-                      ></i>
-                      {% endif %}
+                          <a href="" class="d-inline text-danger" title="Reject Document">
+                            <i class="material-icons icon-remove p-2" data-filename="{{ uploaded_document.image.name }}">delete</i>
+                          </a>
+                        </td>
+                      </tr>
+                    {% endfor %}
+                    {% else %} 
+                    <tr>
+                      <td colspan="5" class="text-center">No documents to verify</td>
+                    </tr>
+                    {% endif %}
+                  </tbody>
+                </table>
+                <!-- MODAL -->
+                <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Zoomed Image</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
                         
-                      
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      </div>
                     </div>
                   </div>
                 </div>
-                {% endfor %}
               </div>
             </div>
-            <div class="row">
-              <div class="form-check form-check-inline ml-4">
-                <label class="form-check-label" for="is_verified">
-                  {% for fields in form %} {% if fields.name == "is_verified" %}
-
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="is_verified"
-                    name="{{ fields.name }}"
-                    {%
-                    if
-                    fields.value
-                    %}
-                    checked
-                    {%
-                    endif
-                    %}
-                  />
-                  Verify documents
-                  <span class="form-check-sign">
-                    <span class="check"></span>
-                  </span>
-                </label>
-              </div>
-            </div>
-            {% elif fields.name == "desc"%}
-            <div class="row">
-              <div class="col-md-12">
-                <div class="form-group bmd-form-group">
-                  <textarea
-                    name="{{fields.name}}"
-                    cols="50"
-                    rows="10"
-                    class="form-control border"
-                    placeholder="Leave a comment about the above pictures"
-                  >
-{{ fields.value }}</textarea
-                  >
-                </div>
-              </div>
-            </div>
-
-            {% else %}
-            <div class="row" style="display: none">
-              <div class="col-md-12">
-                <div class="form-group bmd-form-group">
-                  <input
-                    type="hidden"
-                    name="{{fields.name}}"
-                    value="{{ fields.value }}"
-                  />
-                </div>
-              </div>
-            </div>
-
-            {% endif %} {% endfor %}
           </div>
         </div>
       </div>
-      <!-- <button class="btn btn-rose btn-round w-25 mb-5 ml-4" type="Submit">
-        <i class="material-icons">near_me </i> Verify
-      </button> -->
-      <br />
     </div>
+
   </form>
 </div>
 <script>
@@ -188,13 +126,14 @@
     return cookieValue;
   }
   const csrftoken = getCookie("csrftoken");
+  
 
   const iconVerify = document.querySelectorAll(".icon-verify");
   const iconRemove = document.querySelectorAll(".icon-remove");
 
   const url = `/verify-documents/{{ tenant.user.username }}`;
 
-  // remove icon
+
   iconRemove.forEach((icon) => {
     icon.addEventListener("click", (e) => {
       $.ajax({
@@ -203,7 +142,7 @@
         data: {
           user: "{{ tenant.user.username }}",
           operation: "delete",
-          filename: e.target.dataset.fileName,
+          filename: e.target.dataset.filename,
         },
         headers: {
           "X-CSRFToken": csrftoken,
@@ -217,26 +156,27 @@
 
   iconVerify.forEach((icon) => {
     icon.addEventListener("click", (e) => {
+      e.preventDefault()
       $.ajax({
         url: url,
         method: "POST",
         data: {
           user: "{{ tenant.user.username }}",
           operation: "save",
-          filename: e.target.dataset.fileName,
+          filename: e.target.dataset.filename,
         },
         headers: {
           "X-CSRFToken": csrftoken,
         },
         success(data) {
-          // this.classList.add('text-success')
-          for (let i = 0; i < iconVerify.length; i++) {
-            console.log(iconVerify[i].dataset.fileName);
-            if (iconVerify[i].dataset.fileName === data.file) {
-              iconVerify[i].classList.add('text-success')
-            }
-            location.pathname = url
-          }
+          // for (let i = 0; i < iconVerify.length; i++) {
+          //   console.log(iconVerify[i].dataset.fileName);
+          //   if (iconVerify[i].dataset.fileName === data.file) {
+          //     iconVerify[i].classList.add('text-success')
+          //   }
+            
+          // }
+          location.pathname = url
         },
       });
     });
@@ -247,24 +187,32 @@
   let dismissModal = document.querySelectorAll("button[data-dismiss='modal']")
 
   
-
   clickImg.forEach((imgTag)=>{
     imgTag.addEventListener('click',(e)=>{
       let imageUrl = e.target.dataset.image
+      console.log(imageUrl);
       const img = document.createElement('img')
       img.setAttribute('src',imageUrl)
       img.setAttribute('alt','Document')
       modalBody.appendChild(img)
-     
     })
   })
 
   dismissModal.forEach((btn)=>{
     btn.addEventListener('click',()=>{
-    modalBody.innerHTML = ''
-  })
+      modalBody.innerHTML = ''
+    })
   })
   
+
+const constractFileName =()=>{
+  let docNames = document.querySelectorAll(".doc_name");
+  docNames.forEach((docName)=>{
+    let start = docName.textContent.replace('MEDIA/DOCUMENTS/','').indexOf('_')
+    docName.textContent = docName.textContent.replace('MEDIA/DOCUMENTS/','').slice(0,start)
+  })
+}
+constractFileName()
 
 </script>
 {% endblock body %}
