fixed image validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     />
     <link href="{% static 'demo/demo.css" rel="stylesheet' %}" />
     <link href="{% static 'css/signin.css' %} " rel="stylesheet">
+    <link  href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.css" rel="stylesheet">
     
     {% block gallerycss %}{% endblock %}
       
@@ -66,7 +67,8 @@
     </div>
     <!--   Core JS Files start from here   -->
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'js/core/popper.min.js' %}"></script>
     <script src="{% static 'js/core/bootstrap-material-design.min.js' %}"></script>
     <script src="{% static 'js/plugins/perfect-scrollbar.jquery.min.js' %}"></script>
