--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -1,11 +1,14 @@
-.staged-docs{
-    gap: 1em;
+.staged-docs {
+  gap: 1em;
 }
 .gallery {
   position: relative;
   border-radius: 0.5rem;
   border: 1px solid rgb(196, 196, 196);
   padding: 0px !important;
+  margin: 20px !important;
+  height: fit-content;
+  width: 100%;
   /* overflow: hidden; */
 }
 .gallery img {
@@ -20,28 +23,35 @@
 .icon-wrapper span:nth-child(1) {
   margin-right: 0.5em;
 }
-.icon-wrapper span i,.verify-wrapper-icon i {
+.icon-wrapper span i,
+.verify-wrapper-icon i {
   font-size: 18px;
   cursor: pointer;
 }
-.imagePreviewIcon{
-    display: none
+.imagePreviewIcon {
+  display: none;
 }
 
 /* 
 * Verify Document
 */
-.verify-doc{
-    gap: 1em !important;
+.verify-doc {
+  gap: 1em !important;
 }
-.verify-wrapper-icon{
+.verify-wrapper-icon {
   position: absolute;
   z-index: 4000;
 }
-.verify-wrapper-icon i{
-    margin-top: .7em;
+.verify-wrapper-icon i {
+  margin-top: 0.7em;
 }
 
-.body-verify{
+.body-verify {
   position: relative;
+}
+
+img {
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
