--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -133,6 +133,7 @@
               <th>Total Amount</th>
               <th>Collected</th>
               <th>Due Amount</th>
+              <th>Contract Expiration</th>
               <th class="disabled-sorting text-right">Actions</th>
             </tr>
           </thead>
@@ -151,8 +152,7 @@
                 </a>
 
                 {% elif unit.occupancy_type.occupancy_type.lower == 'document pending' %} 
-                {% if unit.tenantcontract.tenant.uploaddocument_set.all.count > 0 %}
-
+                {% if unit.tenantcontract.tenant.uploaddocument_set.all.count == num_of_docs.docs %}
                 <a
                   href="{% url 'verify_documents' unit.tenantcontract.tenant.user.username %}"
                   class="btn btn-primary btn-round occupancy_type"
@@ -168,12 +168,23 @@
                 </button>
                 {% endif %} 
                 {% elif unit.occupancy_type.occupancy_type.lower == 'create contract' %}
-                <a
-                  href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}"
-                  class="btn btn-primary btn-round occupancy_type"
-                >
-                  {{ unit.occupancy_type.occupancy_type }}
-                </a>
+                
+                {% if unit.tenantcontract.tenant.uploaddocument_set.all.count == num_of_docs.docs %}
+                  <a
+                    href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}"
+                    class="btn btn-primary btn-round occupancy_type"
+                  >
+                    {{ unit.occupancy_type.occupancy_type }}
+                  </a>
+                {% else %}
+                  <button
+                      class="btn btn-primary btn-round occupancy_type"
+                      disabled
+                  >
+                    {{ unit.occupancy_type.occupancy_type }}
+                  </button>
+                {% endif %}
+
                 {% else %}
                 <button
                   class="btn btn-primary btn-round occupancy_type"
@@ -198,6 +209,9 @@
                     {% endif %}
                   {% endfor %}
                 {% endif %}
+              </td>
+              <td>
+                {{unit.tenantcontract.end_date}}
               </td>
 
               <td class="text-right">
