added reports templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
       type="text/css"
       href="{% static 'css/newdoor.css' %}"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/reports.css' %}"
+    />
     <link href="{% static 'demo/demo.css" rel="stylesheet' %}" />
     <link href="{% static 'css/signin.css' %} " rel="stylesheet">
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.css" rel="stylesheet">
