--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <nav class="float-left">
       <ul>
         <li>
@@ -25,5 +25,5 @@
       <a href="http://127.0.0.1:8000/dashboard#" target="_blank">NewDoor</a>
       for a better web.
     </div>
-  </div>
+  </div> -->
 </footer>
