--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -192,7 +192,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link d-flex align-items-center" href="">
+        <a class="nav-link d-flex align-items-center" href="{% url 'report' %}">
           <i class="material-icons">history</i>
           <span class="sidebar-normal"> Reports </span>
         </a>
